force-app/main/default/objects/Room__c/Room__c.object-meta.xml
<CustomObject>
    <description>Hospital Management System object for Room.</description>
    <label>Room</label>
    <nameField>
        <label>Room Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Rooms</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>