force-app/main/default/objects/Room__c/fields/Available_Beds__c.field-meta.xml
<CustomField>
    <fullName>Available_Beds__c</fullName>
    <formula>Capacity__c - BLANKVALUE(Occupied_Beds__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Available Beds</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>