force-app/main/default/objects/Room__c/fields/Daily_Charge__c.field-meta.xml
<CustomField>
    <fullName>Daily_Charge__c</fullName>
    <label>Daily Charge</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>