force-app/main/default/objects/Room__c/fields/Price_Per_Day__c.field-meta.xml
<CustomField>
    <fullName>Price_Per_Day__c</fullName>
    <label>Price Per Day</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>