force-app/main/default/objects/Room__c/fields/Room_Code__c.field-meta.xml
<CustomField>
    <fullName>Room_Code__c</fullName>
    <label>Room Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>