force-app/main/default/objects/Room__c/fields/Room_Sequence__c.field-meta.xml
<CustomField>
    <fullName>Room_Sequence__c</fullName>
    <displayFormat>{000}</displayFormat>
    <label>Room Sequence</label>
    <type>AutoNumber</type>
</CustomField>