force-app/main/default/objects/Room__c/fields/Room_Type__c.field-meta.xml
<CustomField>
    <fullName>Room_Type__c</fullName>
    <label>Room Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>shared non ac room without extra bed</fullName>
            </value>
            <value>
                <fullName>Private non ac room with extra bed</fullName>
            </value>
            <value>
                <fullName>Shared Non AC Room with extra bed</fullName>
            </value>
            <value>
                <fullName>shared Ac room with extra bed</fullName>
            </value>
            <value>
                <fullName>shared ac room without extra bed</fullName>
            </value>
            <value>
                <fullName>private ac room without extra bed</fullName>
            </value>
            <value>
                <fullName>private non ac room without extra bed</fullName>
            </value>
            <value>
                <fullName>private ac room with extra bed</fullName>
            </value>
            <value>
                <fullName>ICU</fullName>
            </value>
            <value>
                <fullName>OPD Cabin</fullName>
            </value>
            <value>
                <fullName>Private</fullName>
            </value>
            <value>
                <fullName>Semi Private</fullName>
            </value>
            <value>
                <fullName>Shared</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>