force-app/main/default/objects/Room__c/fields/Ward_Manager_Approval__c.field-meta.xml
<CustomField>
    <fullName>Ward_Manager_Approval__c</fullName>
    <label>Ward Manager Approval</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
                <default>true</default>
                <label>Pending</label>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>