force-app/main/default/objects/Room__c/fields/Ward_Type__c.field-meta.xml
<CustomField>
    <fullName>Ward_Type__c</fullName>
    <formula>TEXT(Ward__r.Ward_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ward Type</label>
    <type>Text</type>
</CustomField>