force-app/main/default/objects/Room__c/validationRules/greater_than_0.validationRule-meta.xml
<ValidationRule>
    <fullName>greater_than_0</fullName>
    <active>true</active>
    <errorConditionFormula>Capacity__c &lt; 0</errorConditionFormula>
    <errorDisplayField>Capacity__c</errorDisplayField>
    <errorMessage>capacity should be greater than 0</errorMessage>
</ValidationRule>