force-app/main/default/objects/Room__c/validationRules/occupied_beds_validation.validationRule-meta.xml
<ValidationRule>
    <fullName>occupied_beds_validation</fullName>
    <active>true</active>
    <errorConditionFormula>Occupied_Beds__c &gt;= Capacity__c</errorConditionFormula>
    <errorDisplayField>Occupied_Beds__c</errorDisplayField>
    <errorMessage>occupied beds cant be more than room capacity</errorMessage>
</ValidationRule>